# changesets-fetcher

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: run-athena.yml  run-duckdb.yml  run.yml
scripts/: copy-to-s3.sh  tile.sh
sql/: duckdb.sql  tables.sql  youthmappers_query.sql
src/changesets_fetcher/: __init__.py  athena.py  duckdb.py  utils.py
